--- a/reyes/carta.html
+++ b/reyes/carta.html
@@ -18,10 +18,12 @@
             Queridos Reyes Magos
         </h1>
         <p>
-            Este año espero haberme portado muy bien, yo lo he intentado. Como este año estoy aprendiendo muchas cosas nuevas, os escribo la carta en un formato web, espero que salga bien.
+            Este año espero haberme portado muy bien, yo lo he intentado. 
+            Como este año estoy aprendiendo muchas cosas nuevas, os escribo la carta en un formato web, espero que salga bien.
         </p><br>
         <p>
-            Mi lista este año es un poco más corta que de normal. He descubierto que estar en casa y poder pasar tiempo con mi familia y mis amigas es todo lo que necesito para estar feliz.
+            Puede que mi lista este año sea un poco más corta que de normal. 
+            Pero he descubierto que estar en casa y poder pasar tiempo con mi familia y mis amigas es todo lo que necesito para estar feliz.
         </p><br>
         <p>
             Aun así os escribo algunas cosas que me pueden venir bien:
@@ -33,8 +35,13 @@
             <li><a href="sorpresa.html">Muuchas sorpresas</a></li><br>
         </ul>
         <p>
-            Pinchando en cada elemento de la lista os dejo algunas fotos para que veais a lo que me refiero. Las fotos son orientativas para ayudar con el estilo, pero estoy abierta a sorpresas.
+            Pinchando en cada elemento de la lista os dejo algunas fotos para que veais a lo que me refiero. 
+            Las fotos son orientativas para ayudar con el estilo, pero estoy abierta a sorpresas.
         </p><br>
+        <p>
+            Firmado: <br>
+            Àngela
+        </p>
     </main>
     <footer>
         <img src="images/estrellas_navidad.png" id="borde">
